@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2022 Thomas Akehurst
+ * Copyright (C) 2016-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,7 +41,6 @@ import com.github.tomakehurst.wiremock.junit.Stubbing;
 import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
 import com.github.tomakehurst.wiremock.stubbing.StubMapping;
 import com.github.tomakehurst.wiremock.testsupport.WireMockResponse;
-import com.google.common.collect.ImmutableMap;
 import com.toomuchcoding.jsonassert.JsonAssertion;
 import com.toomuchcoding.jsonassert.JsonVerifiable;
 import java.io.File;
@@ -313,7 +312,7 @@ public class AdminApiTest extends AcceptanceTestBase {
   }
 
   @Test
-  public void getLoggedRequestById() throws Exception {
+  public void getLoggedRequestById() {
     for (int i = 1; i <= 3; i++) {
       testClient.get("/received-request/" + i);
     }
@@ -487,7 +486,7 @@ public class AdminApiTest extends AcceptanceTestBase {
     assertThat(body, jsonPartEquals("scenarios[0].id", "my-scenario"));
     assertThat(body, jsonPartEquals("scenarios[0].name", "my-scenario"));
     assertThat(body, jsonPartEquals("scenarios[0].state", "\"2\""));
-    assertThat(body, jsonPartEquals("scenarios[0].possibleStates", asList("2", "3", "Started")));
+    assertThat(body, jsonPartEquals("scenarios[0].possibleStates", asList("Started", "2", "3")));
     assertThat(body, jsonPartEquals("scenarios[0].mappings[0].request.url", "/one"));
   }
 
@@ -934,15 +933,7 @@ public class AdminApiTest extends AcceptanceTestBase {
         get("/with-metadata")
             .withId(id)
             .withMetadata(
-                ImmutableMap.<String, Object>of(
-                    "one",
-                    1,
-                    "two",
-                    "2",
-                    "three",
-                    true,
-                    "four",
-                    ImmutableMap.of("five", "55555"))));
+                Map.of("one", 1, "two", "2", "three", true, "four", Map.of("five", "55555"))));
 
     WireMockResponse response = testClient.get("/__admin/mappings/" + id);
 
@@ -1278,6 +1269,68 @@ public class AdminApiTest extends AcceptanceTestBase {
         response.content(),
         jsonPartEquals(
             "errors[0].title", "Query parameter matchingStub value '' is not a valid UUID"));
+  }
+
+  @Test
+  void returnsDefaultStubMappingInServeEventWhenRequestNotMatched() {
+    testClient.get("/wrong-request/1");
+
+    WireMockResponse serveEventsResponse = testClient.get("/__admin/requests");
+
+    String data = serveEventsResponse.content();
+    assertThat(data, jsonPartEquals("requests[0].stubMapping.id", "\"${json-unit.any-string}\""));
+    assertThat(data, jsonPartEquals("requests[0].stubMapping.response.status", 404));
+  }
+
+  @Test
+  void returnsBadRequestWhenAttemptingToGetByNonUuid() {
+    WireMockResponse response = testClient.get("/__admin/mappings/not-a-uuid");
+    assertThat(response.statusCode(), is(400));
+    assertThat(
+        response.content(), jsonPartEquals("errors[0].title", "not-a-uuid is not a valid UUID"));
+  }
+
+  @Test
+  void returnsNotFoundWhenAttemptingToGetNonExistentStub() {
+    assertThat(testClient.get("/__admin/mappings/" + UUID.randomUUID()).statusCode(), is(404));
+  }
+
+  @Test
+  void returnsBadRequestWhenAttemptingToEditByNonUuid() {
+    assertThat(testClient.putJson("/__admin/mappings/not-a-uuid", "{}").statusCode(), is(400));
+  }
+
+  @Test
+  void returnsNotFoundWhenAttemptingToEditNonExistentStub() {
+    assertThat(testClient.put("/__admin/mappings/" + UUID.randomUUID()).statusCode(), is(404));
+  }
+
+  @Test
+  void returnsBadRequestWhenAttemptingToRemoveByNonUuid() {
+    assertThat(testClient.delete("/__admin/mappings/not-a-uuid").statusCode(), is(400));
+  }
+
+  @Test
+  void returnsNotFoundWhenAttemptingToRemoveNonExistentStub() {
+    assertThat(testClient.put("/__admin/mappings/" + UUID.randomUUID()).statusCode(), is(404));
+  }
+
+  @Test
+  void returnsBadRequestWhenAttemptingToGetServeEventByNonUuid() {
+    WireMockResponse response = testClient.get("/__admin/requests/not-a-uuid");
+    assertThat(response.statusCode(), is(400));
+    assertThat(
+        response.content(), jsonPartEquals("errors[0].title", "not-a-uuid is not a valid UUID"));
+  }
+
+  @Test
+  void returnsNotFoundWhenAttemptingToGetServeEventByNonExistentId() {
+    assertThat(testClient.get("/__admin/requests/" + UUID.randomUUID()).statusCode(), is(404));
+  }
+
+  @Test
+  void returnsBadRequestWhenAttemptingToRemoveServeEventByNonUuid() {
+    assertThat(testClient.delete("/__admin/requests/not-a-uuid").statusCode(), is(400));
   }
 
   public static class TestExtendedSettingsData {
